added few more entries to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,12 +10,14 @@
 .settings
 .springBeans
 .sts4-cache
+.DS_Store
 
 ### IntelliJ IDEA ###
 .idea
 *.iws
 *.iml
 *.ipr
+out/
 
 ### NetBeans ###
 nbproject/private/
